# Django-Assginment

chaper_01/config/: urls.py
chapter_01/: .python-version  pyproject.toml
chapter_01/config/: settings.py  urls.py
chapter_02/: .python-version  db.sqlite3  pyproject.toml
chapter_02/config/: settings.py  urls.py
chapter_02/todo/: models.py  views.py
chapter_02/todo/migrations/: 0001_initial.py
chapter_03/: .env  .gitignore  db.sqlite3  pyproject.toml
chapter_03/config/: settings.py  urls.py
chapter_03/templates/todo/: todo_create.html  todo_info.html  todo_list.html  todo_update.html
chapter_03/todo/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
chapter_03/todo/migrations/: 0001_initial.py  0002_todo_user.py  0003_comment.py
chapter_03/users/: views.py
